2008-05-02  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (dispatch-reader): fix message
	* io.d (read_macro): ditto
	* pathname.d (SYS::LIB-DIRECTORY): ditto

2008-05-01  Sam Steingold  <sds@gnu.org>

	* utils/fix-perms.sh: *.xsl & *.css are not executable

2008-05-01  Sam Steingold  <sds@gnu.org>

	* macros1.lisp (*suppress-similar-constant-redefinition-warning*):
	new user variable
	(defconstant): pass ,initial-var to constant-warning
	(constant-warning): accept 3rd variable and respect
	*suppress-similar-constant-redefinition-warning*
	* constobj.d (version): bump, because constant-warning is ABI

2008-04-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1928759 ]: (format nil "~8e" .999999d0) => " 10.0d-1"
	* format.lisp (format-float-for-e): when format-float-to-string
	rounds up above 1, adjust everything

2008-04-23  Sam Steingold  <sds@gnu.org>

	* fill-out.lisp (stream-start-s-expression@t): return
	*PRINT-RIGHT-MARGIN*, just like in format.lisp

2008-04-23  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (clisp_gettext): the common part of ...
	(clgettext, clgettextl): use it

2008-04-23  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (documentation@symbol@impnotes): look into impnotes
	for CUSTOM symbols too, so that (documentation 'impnotes-root
	'sys::impnotes) works

2008-04-23  Sam Steingold  <sds@gnu.org>

	followup to the 2008-04-08 patch which broke log for very small numbers
	* comptran.d (N_log_abs_R): avoid the log(1 + (x^2 + y^2 - 1))
	trick for small numbers
	* realtran.d (ln2_F_float_F): use F_lnx1_F instead of F_lnx_F
	(F_lnx_F): move most of the calculation from R_ln1_R here
	(R_ln1_R): use either F_lnx1_F (small arg) or F_lnx_F (others)
	(R_ln_R): do not call R_ln1_R, call F_lnx_F directly

2008-04-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (installdirs, install-bin, uninstall): pass DESTDIR
	to make in po
	* po/Makefile.in.in (install-data-yes, installdirs): respect DESTDIR
	* configure: do not try to link po twice
