@@ -104,7 +104,7 @@ global maygc bool call_if_not (const gcv_object_t* stackptr,
 nonreturning_function(local, error_both_tests, (void)) {
   pushSTACK(TheSubr(subr_self)->name);
   error(error_condition,
-        GETTEXT("~S: Must not specify both :TEST and :TEST-NOT arguments"));
+        GETTEXT("~S: must not specify both :TEST and :TEST-NOT arguments"));
 }
 
 /* UP: Check the :TEST, :TEST-NOT - arguments
