@@ -1,3 +1,8 @@
+2008-05-03  Sam Steingold  <sds@gnu.org>
+
+	* charstrg.d, compiler.lisp, debug.d, defmacro.lisp, error.d:
+	* funarg.d, record.d, sequence.d: tweak i18n messages
+
 2008-05-02  Sam Steingold  <sds@gnu.org>
 
 	* defs2.lisp (dispatch-reader): fix message
